inline and block tag complete.

--- a/HTML/VIDEO8/index.html
+++ b/HTML/VIDEO8/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>it is a block element</div>
     <p>hey it me swastik</p>
+    <span>i am inline </span>
     <a href="hhtps://google.com">Google</a>
     <link rel="stylesheet" href="style.css">
 </body>
