--- a/CSS/Video 15/index.html
+++ b/CSS/Video 15/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
+        h1,h2{
             background: hotpink;
             color:aqua
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>three way to add css in the code</h1>
+    <h1>learning css</h1>
+    <h2>three way to add css in the code</h2>
     <div>
         <ol>
             <li style="color:brown;background: #000;">inline css</li>
