fonts in css has completed

--- a/CSS/VIDEO 19/index.html
+++ b/CSS/VIDEO 19/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fonts</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      div {
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-        font-weight: 600;
-        text-decoration: underline;
-        font-style: italic;
+      div{
+        font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: capitalize;
+  text-decoration:underline;
+      }
+      p{
+        text-transform: uppercase;
+        text-decoration:underline;
+        text-decoration-color: aquamarine;
+        text-decoration-style: wavy;
+        font-size: larger;
+        text-align: center ;
       }
     </style>
   </head>
@@ -17,5 +32,6 @@
     <div>
       <h1>This is video of font</h1>
     </div>
+    <p>fonts Style</p>
   </body>
 </html>
