Going to be End

--- a/CSS/VIDEO 22/index.html
+++ b/CSS/VIDEO 22/index.html
@@ -18,13 +18,22 @@
         }
         .container{
             border:2px solid black;
-            width: 100vw;
-            height: 80vh;
+            width: 80vw;
+            min-height: 80vh;
             background-color: aquamarine;
             font-size: 18px;
+            margin:23px auto;
+            box-sizing: border-box;
+
         }
         .container{
             font-size: 2em;
+        }
+        .mycontent{
+            width: 100vmin;
+            box-sizing: border-box;
+            margin: 23px auto;
+
         }
     </style>
 </head>
@@ -34,6 +43,9 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quasi est eius, tempora placeat, itaque voluptatem nulla ea voluptates vero cumque, velit ullam eos minima. Eos nisi repudiandae rerum consectetur.
         </p>
+    </div>
+    <div class="mycontent">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui necessitatibus, eaque laboriosam neque autem nostrum quis nam, dolore unde officiis iure illum, incidunt soluta ad earum voluptates blanditiis veritatis ipsum. Neque, culpa explicabo? Dolorum.</p>
     </div>
 </body>
 </html>
