CSS Sizing Units has completed

--- a/CSS/VIDEO 22/index.html
+++ b/CSS/VIDEO 22/index.html
@@ -28,6 +28,7 @@
         }
         .container{
             font-size: 2em;
+            width: 50%;
         }
         .mycontent{
             width: 100vmin;
