--- a/CSS/VIDEO 31/index.html
+++ b/CSS/VIDEO 31/index.html
@@ -10,7 +10,7 @@
                 background-color: red;
             }
         }
-        div{
+        body{
             background-color: aquamarine;
         }
     </style>
