--- a/CSS/VIDEO 34/index.html
+++ b/CSS/VIDEO 34/index.html
@@ -13,7 +13,9 @@
             border: 2px solid red;
 
         }
-       
+        img{
+            float: right;
+        }
         .card:nth-child(3){
             background-color:aquamarine;
             clear: right;
