--- a/CSS/VIDEO 38/index.html
+++ b/CSS/VIDEO 38/index.html
@@ -8,10 +8,14 @@
         .container{
             border: 2px solid rebeccapurple;
             display: flex;
+            height: 60vh;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column-reverse;
         }
         .item{
-            height: 92px;
-            width: 82px;
+            height: 62px;
+            width: 52px;
             border: 2px solid black;
             margin: 4px;
             background-color: orangered;
@@ -20,11 +24,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
