--- a/CSS/VIDEO 38/index.html
+++ b/CSS/VIDEO 38/index.html
@@ -10,8 +10,10 @@
             display: flex;
             height: 60vh;
             align-items: center;
-            justify-content: center;
-            flex-direction: column-reverse;
+            /* justify-content: center; */
+            /* flex-direction: column-reverse; */
+            flex-wrap:wrap-reverse;
+            align-content: center;
         }
         .item{
             height: 62px;
@@ -29,6 +31,31 @@
         <div class="item">3</div>
         <div class="item">4</div>
         <div class="item">5</div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
