--- a/CSS/VIDEO 38/index.html
+++ b/CSS/VIDEO 38/index.html
@@ -13,12 +13,12 @@
             /* justify-content: center; */
             /* flex-direction: column-reverse; */
             flex-wrap:wrap-reverse;
-            align-content: center;
+            /* align-content: center; */
             flex-flow: row wrap;
             gap: 40px 10px;
         }
         .item{
-            flex-grow: 1;
+            /* flex-grow: 1; */
             height: 62px;
             width: 52px;
             border: 2px solid black;
@@ -35,7 +35,9 @@
             order: 3;
         }
         .item1{
-            flex-grow: 2;
+            /* flex-grow: 2; */
+            /* flex-shrink: 2; */
+            align-self: flex-end;
         }
     </style>
 </head>
