--- a/CSS/VIDEO 39/index.html
+++ b/CSS/VIDEO 39/index.html
@@ -6,10 +6,17 @@
     <title>CSS Grid</title>
     <style>
         .contant{
+            width: 88vw;
             border:2px solid black;
             display: grid;
-            grid-template-columns: 120px 100px;
-            grid-template-rows: 100px 100px 100px;
+            /* grid-template-columns: [protom] 120px [dityo] 100px [tritho];
+            grid-template-rows: 100px 100px 100px; */
+
+            /* grid-template-areas:"nav nav nav"
+            "side article article"
+            "footer footer footer" */
+            grid-template-columns: 1fr 1fr 1fr;
+                                
         }
         .item{
             border: 2px solid brown;
@@ -17,23 +24,30 @@
             width: 55px;
             
         }
-        .item4{
-            grid-row: 1/2;
-            grid-column: 1/2;
-        }
         .item1{
-            grid-row: 1/2;
-            grid-column: 1/2;
+            /* grid-row-start: 2;
+            grid-row-end: 3; */
+            grid-area: nav;
+        }.item2{
+            grid-area: side;
+        }
+        .item3{
+            grid-area: article;
+        }
+        .item4{
+            /* grid-row: 1/2;
+            grid-column: protom/tritho; */
+            grid-area: footer;
         }
     </style>
 </head>
 <body>
     <div class="contant">
         <div class="item item1">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
+        <div class="item item2">2</div>
+        <div class="item item3">3</div>
         <div class="item item4">4</div>
-        <div class="item">5</div>
+        <div class="item item5">5</div>
     </div>
 </body>
 </html>
