--- a/CSS/VIDEO 39/index.html
+++ b/CSS/VIDEO 39/index.html
@@ -6,7 +6,8 @@
     <title>CSS Grid</title>
     <style>
         .contant{
-            width: 88vw;
+            width: 80vw;
+            height: 50vh;
             border:2px solid black;
             display: grid;
             /* grid-template-columns: [protom] 120px [dityo] 100px [tritho];
@@ -15,8 +16,12 @@
             /* grid-template-areas:"nav nav nav"
             "side article article"
             "footer footer footer" */
-            grid-template-columns: 1fr 1fr 1fr;
-                                
+            grid-template-columns: repeat(4, 80px);
+            row-gap: 20px;
+            column-gap:10px;
+            justify-items: center;
+            align-items: center;
+            place-content:center;
         }
         .item{
             border: 2px solid brown;
@@ -27,17 +32,17 @@
         .item1{
             /* grid-row-start: 2;
             grid-row-end: 3; */
-            grid-area: nav;
+            /* grid-area: nav; */
         }.item2{
-            grid-area: side;
+            /* grid-area: side; */
         }
         .item3{
-            grid-area: article;
+            /* grid-area: article; */
         }
         .item4{
             /* grid-row: 1/2;
             grid-column: protom/tritho; */
-            grid-area: footer;
+            /* grid-area: footer; */
         }
     </style>
 </head>
