--- a/CSS/VIIDEO 40/index.html
+++ b/CSS/VIIDEO 40/index.html
@@ -22,6 +22,7 @@
         main{
             background-color: black;
             color: white;
+            padding: 34px;
         }
         .box1{
             background-color:pink;
@@ -43,9 +44,9 @@
             padding: 34px;
             border: 2px solid white;
             padding: 20px 0px;
-            margin: 20 34vw;
+            margin: 20px 34vw;
             font-size: 2em;
-            border-radius: 8px;
+            border-radius: 13px;
         }
         footer{
             background-color: brown;
@@ -64,9 +65,8 @@
         <div class="container">
             <div class="box1"></div>
             <div class="box2"></div>
-            
-            <div class="text-box">Welcome to web development GanduGiri</div>
         </div>
+        <div class="text-box">Welcome to web development GanduGiri</div>
     </main>
 
     <footer>
