--- a/CSS/VIDEO 42/index.html
+++ b/CSS/VIDEO 42/index.html
@@ -13,10 +13,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            /* transform:rotateY(50deg) */
+            transform:rotate(0.125turn)
             /* transform: scaleY(5); */
             /* transform: skew(35deg); */
-            transform: translateY(100%) skewX(20deg) translateX(50%);
+            /* transform: translateY(100%) skewX(20deg) translateX(50%); */
+            
         }
         .content{
             height: 70vh;
