--- a/CSS/VIDEO 43/index.html
+++ b/CSS/VIDEO 43/index.html
@@ -6,6 +6,7 @@
     <title>Exercise 6</title>
     <style>
         .logo{
+            
         }
         .logo img{
             width:164px;
@@ -14,13 +15,20 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            font-family: "Segoe ul";
         }
         .right ul{
             display: flex;
             gap: 32px;
         }
         .right ul li{
-         list-style: none;   
+         list-style: none;  
+         display: flex; 
+         align-items: center;
+         cursor: pointer;
+        }
+        .right ul li span{
+            padding:0 9px ;
         }
     </style>
 </head>
