--- a/CSS/VIDEO 45/index.html
+++ b/CSS/VIDEO 45/index.html
@@ -11,17 +11,20 @@
             width: 45vw;
         }
         .box{
-            background-color: rebeccapurple;
-            height: 5vh;
-            width: 4vw;
-            transition-property: tranfrom, background-color;
+            background-color: aquamarine;
+            width: 5vw;
+            height: 4vh;
+            /* transition-property: background-color, transform;
             transition-duration: 3s;
-            transition-timing-function:ease-in-out ;
-            transition-delay: 1s;
+            transition-timing-function: cubic-bezier(0.22, 0.43, 0, 0.99); */
+            /* transition-delay: 1s; */
+            transition: all 3s cubic-bezier(0.09, 0.5, 0, 0.99) 1s;
         }
+
         .translate{
-            transform: translateX(10vw) translateY(10vh);
+            transform: translateX(10vw) translateY(10vh) scale(2);
             background-color: blue;
+        }
         }
     </style>
 </head>
