--- a/CSS/VIDEO 49/index.html
+++ b/CSS/VIDEO 49/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Object-fit and Object-cover</title>
+    <style>
+        .container{
+            height: 634px;
+            width: 688px;
+            border: 2px solid black;
+            background-color:rgb(203, 243, 245);
+        }
+        img{
+            width: 488px;
+            height: 450px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="https://images.pexels.com/photos/29761242/pexels-photo-29761242/free-photo-of-hiker-s-view-of-vysoke-tatry-mountains-at-sunset.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+    </div>
 </body>
 </html>
