--- a/CSS/VIDEO 49/index.html
+++ b/CSS/VIDEO 49/index.html
@@ -6,21 +6,27 @@
     <title>CSS Object-fit and Object-cover</title>
     <style>
         .container{
-            height: 634px;
-            width: 688px;
+            width: 488px;
+            height: 450px;
             border: 2px solid black;
-            background-color:rgb(203, 243, 245);
+             background-image: url("https://us.123rf.com/450wm/progressman/progressman1909/progressman190900115/130695651-woman-in-black-coat-walking-along-the-sea.jpg?ver=6" );
+             background-position:center center;
+             
         }
         img{
             width: 488px;
             height: 450px;
             object-fit: cover;
-        }
+            /*object-position: bottom; */
+            /* object-fit: fill; */
+            /* object-fit: scale-down; */
+            object-position: 10px 20px;
+            }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="https://images.pexels.com/photos/29761242/pexels-photo-29761242/free-photo-of-hiker-s-view-of-vysoke-tatry-mountains-at-sunset.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+        <!-- <img src="https://images.pexels.com/photos/29761242/pexels-photo-29761242/free-photo-of-hiker-s-view-of-vysoke-tatry-mountains-at-sunset.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt=""> -->
     </div>
 </body>
 </html>
