--- a/CSS/VIDEO 49/index.html
+++ b/CSS/VIDEO 49/index.html
@@ -11,7 +11,7 @@
             border: 2px solid black;
              background-image: url("https://us.123rf.com/450wm/progressman/progressman1909/progressman190900115/130695651-woman-in-black-coat-walking-along-the-sea.jpg?ver=6" );
              background-position:center center;
-             
+             background-repeat: no-repeat;
         }
         img{
             width: 488px;
