--- a/CSS/VIDEO 50/index.html
+++ b/CSS/VIDEO 50/index.html
@@ -17,10 +17,12 @@
         .img2{
             filter: brightness(2);
             width: 222px;
+            filter: grayscale(100%);
         }
         .img3{
             filter: contrast(2);
             width: 222px;
+            filter: sepia(50%);
         }
         
     </style>
