--- a/CSS/VIDEO 48/index.html
+++ b/CSS/VIDEO 48/index.html
@@ -14,7 +14,7 @@
             position: absolute;
             bottom: 0;
             left: 0; 
-            
+            animation: animationX 3s linear infinite, animationY 1s ease-out infinite alternate
         }
 
         .container {
