--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <nav style="background-color: rgb(211, 26, 26) ;">
+        <nav>
           <span><img width="60" src="assets/image/logo (2).svg" alt=""></span>
           <div>
             <button>English</button>
