--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -16,6 +16,12 @@
           </div>
         </nav>
         <div class="box"></div>
+        <div class="hero">
+          Unlimited movies, TV shows and more
+          Starts at ₹149. Cancel at any time.
+
+          Ready to watch? Enter your email to create or restart your membership.
+        </div>
     </div>
 </body>
 </html>
