--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -17,10 +17,15 @@
         </nav>
         <div class="box"></div>
         <div class="hero">
-          Unlimited movies, TV shows and more
-          Starts at ₹149. Cancel at any time.
+          <span>Unlimited movies, TV shows and more</span>
+          <span>Starts at ₹149. Cancel at any time.</span>
 
-          Ready to watch? Enter your email to create or restart your membership.
+          <span>Ready to watch? Enter your email to create or restart your</span>
+          <span>membership</span>
+            <div class="hero-button">
+              <input type="text" placeholder="Email address">
+              <button class="btn-red">Get Started &gt</button>
+            </div>
         </div>
     </div>
 </body>
