--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -27,6 +27,7 @@
               <button class="btn-red">Get Started &gt</button>
             </div>
         </div>
+        <div class="separation"></div>
     </div>
 </body>
 </html>
