--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -17,11 +17,9 @@
         </nav>
         <div class="box"></div>
         <div class="hero">
-          <span>Unlimited movies, TV shows and more</span>
-          <span>Starts at ₹149. Cancel at any time.</span>
-
-          <span>Ready to watch? Enter your email to create or restart your</span>
-          <span>membership</span>
+          <span>Enjoy big movies, hit series and more from ₹ 149.</span>
+            <span>Join today. Cancel anytime.</span>
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-button">
               <input type="text" placeholder="Email address">
               <button class="btn-red">Get Started &gt</button>
