--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -11,8 +11,8 @@
         <nav>
           <span><img width="60" src="assets/image/logo (2).svg" alt=""></span>
           <div>
-            <button>English</button>
-            <button>Sign In</button>
+            <button class="btn">English</button>
+            <button class="btn-red-sm">Sign In</button>
           </div>
         </nav>
         <div class="box"></div>
