--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -58,18 +58,32 @@
 <div class="separation"></div>
 
 <section class="first third">
-  
-  <div class="secImg">
-    <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
-    <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
-    autoplay loop muted></video>
-  </div>
-  
   <div>
-      <span>Enjoy on your TV</span>
-      <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
+      <span>Watch everywhere</span>
+      <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
+  </div>
+
+  <div class="secImg">
+      <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+      <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+          autoplay loop muted></video>
+  </div>
+</section>
   </div>
 </section>
 <div class="separation"></div>
+
+<section class="first second">
+    
+  <div class="secImg">
+    <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
+    alt="">
+</div>
+
+    <div>
+      <span>Download your shows to watch offline</span>
+      <span>Save your favourites easily and always have something to watch.</span>
+  </div>
+</section>
 </body>
 </html>
