--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -65,8 +65,9 @@
 
   <div class="secImg">
       <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
-      <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
-          autoplay loop muted></video>
+      <video src="assets/vdo/Video 53_assets_videos_video1 (1).m4v"
+          autoplay loop muted
+          ></video>
   </div>
 </section>
   </div>
@@ -84,6 +85,59 @@
       <span>Download your shows to watch offline</span>
       <span>Save your favourites easily and always have something to watch.</span>
   </div>
+
+</section>
+<div class="separation"></div>
+
+<section class="faq">
+  <h2>Frequently Asked Questions</h2>
+  <div class="faqBox">
+      <span>What is Netflix? </span>
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+    </svg>
+  </div>
+
+  <div class="faqBox">
+    <span> How much does Netflix cost? </span>
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+      <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+  </svg>
+</div>
+
+<div class="faqBox">
+  <span>Where can i watch? </span>
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+</svg>
+</div>
+
+<div class="faqBox">
+  <span>How do i cancel? </span>
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+</svg>
+</div>
+
+<div class="faqBox">
+  <span>What can i watch on Netflix? </span>
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+</svg>
+</div>
+
+<div class="faqBox">
+  <span> Is netflix good for kids? </span>
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+</svg>
+</div>
 </section>
 </body>
 </html>
