For today it is done.

--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -139,5 +139,42 @@
 </svg>
 </div>
 </section>
+<div class="separation"></div>
+
+<footer>
+  <span>
+    Questions? Call 000-800-919-1694
+  </span>
+  <div class="footer">
+  <div class="Footer-item"
+    <a href="faq">FAQ</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+  </div>
+
+  <div class="Footer-item"
+    <a href="faq">FAQ</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+  </div>
+
+  <div class="Footer-item"
+    <a href="faq">FAQ</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+  </div>
+
+  <div class="Footer-item"
+    <a href="faq">FAQ</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+    <a href="faq">Investor Realation</a>
+  </div>
+</div>
+</footer>
+
 </body>
 </html>
