came to the end.

--- a/PROJECT/NETFLIX/index.html
+++ b/PROJECT/NETFLIX/index.html
@@ -142,9 +142,9 @@
 <div class="separation"></div>
 
 <footer>
-  <span>
+  <div class="question">
     Questions? Call 000-800-919-1694
-  </span>
+  </div>
   <div class="footer">
   <div class="Footer-item"
     <a href="faq">FAQ</a>
