--- a/JS/video_63.html
+++ b/JS/video_63.html
@@ -7,22 +7,30 @@
   </head>
   <body>
     <script>
-      let arr = [1, 2, 3, 4, 5, 6, 7, 8];
+    //   let arr = [1, 2, 3, 4, 5, 6, 7, 8];
 
-      console.log(arr.toString());
-      console.log(arr.join(" and "));
-      console.log(arr.pop());
-      console.log(arr.push("swastik"));
-      console.log(arr.shift());
-      console.log(arr.unshift("dutta"));
-      console.log(arr);
+    //   console.log(arr.toString());
+    //   console.log(arr.join(" and "));
+    //   console.log(arr.pop());
+    //   console.log(arr.push("swastik"));
+    //   console.log(arr.shift());
+    //   console.log(arr.unshift("dutta"));
+    //   console.log(arr);
       
-      let a1 = [1,2,3]
-      let a2 = [4,5,6]
-      let a3 = [7,8,9]
+    //   let a1 = [1,2,3]
+    //   let a2 = [4,5,6]
+    //   let a3 = [7,8,9]
 
-      console.log(a1.concat(a2,a3));
+    //   console.log(a1.concat(a2,a3));
+    //   console.log(arr.sort());
+    //   console.log();
       
+    //   let num = [1,3,4,5,7]
+    //   console.log(num.splice(0,4,45,68));
+    //   console.log(num);
+    let a =  [1,2,4,5,6,7,8,9]
+        a.forEach((value,i,array) => {console.log(value,i,array);
+        });
     </script>
   </body>
 </html>
