--- a/JS/video_63.html
+++ b/JS/video_63.html
@@ -28,9 +28,28 @@
     //   let num = [1,3,4,5,7]
     //   console.log(num.splice(0,4,45,68));
     //   console.log(num);
-    let a =  [1,2,4,5,6,7,8,9]
-        a.forEach((value,i,array) => {console.log(value,i,array);
-        });
+    // let a =  [1,2,4,5,6,7,8,9]
+    //     a.forEach((value,i,array) => {console.log(value,i,array);
+    //     });
+
+        let obj = {
+            a: 1,
+            b: 2,
+            c: 3
+        }
+
+        for (const key in obj) {
+            if (Object.prototype.hasOwnProperty.call(obj, key)) {
+                const element = obj[key];
+                console.log(element,key);
+            }
+        }
+        // for (const key in object) {
+        //     if (Object.prototype.hasOwnProperty.call(object, key)) {
+        //         const element = object[key];
+                
+        //     }
+        // }
     </script>
   </body>
 </html>
