--- a/JS/video_71.html
+++ b/JS/video_71.html
@@ -36,6 +36,17 @@
         trying.className = "created";
         trying.textContent = "I am insertAdjacentElemen";
         document.querySelector(".container").insertAdjacentElement("afterend",trying)
+
+        // let dick = document.createElement("div");
+        // dick.innerHTML = "I am <b> append </b>" ;
+        // dick.setAttribute("class", "created");
+        // document.querySelector(".container").after(dick);
+
+        // let dick = document.createElement("div");
+        // dick.innerHTML = "I am <b> append </b>" ;
+        // dick.setAttribute("class", "created");
+        // document.querySelector(".container").before(dick);
+        
       </script>
     </div>
   </body>
