--- a/JS/video_71.html
+++ b/JS/video_71.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+        .box{
+            color: red;
+        }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -15,7 +20,7 @@
       >
         Hey i am a box
       </div>
-      <div class="box" style="flex: auto">Hey i am a box</div>
+      <div class="box">Hey i am a box</div>
 
       <script>
         //this is the last one
