--- a/JS/VIDEO_73/index.html
+++ b/JS/VIDEO_73/index.html
@@ -9,25 +9,47 @@
             height: 100%;
             background-color: black;
             /* height: 180px; */
-            padding:15px;
-            margin-right: auto;
+            padding:8px;
+            margin: auto;
             border-radius: 6px;
             display: flex;
+            width: 60%;
         }
         .image{
-            
+            border-radius: 5px;
         }
         .title{
             color: white;
             font-size: 29px;
-            margin: 1px auto auto ;
+            margin: 1px auto auto 5px;
         }
+        .minPro{
+            display: flex;
+        }
+        .cName{
+            color: white;
+            opacity: 0.5;
+            font-size:small;      margin: 1px auto auto 5px;
+         }
+         .time{
+            color: white;
+         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img class=" image" src="https://i.ytimg.com/vi/tVzUXW6siu0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLACwWOixJVrKLFindK92kYMgTcQbw" ,alt="">
-        <div class="title">Introduction to Backend | Sigma Web Dev veido #2</div>
+        <div class="imagePor">
+            <img class=" image" src="https://i.ytimg.com/vi/tVzUXW6siu0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLACwWOixJVrKLFindK92kYMgTcQbw" ,alt="">
+            <div class="duration"></div>
+        </div>
+        <div class="sidePro">
+            <div class="title">Introduction to Backend | Sigma Web Dev veido #2</div>
+            <div class="minPro">
+                <div class="cName">Code With Harry</div>
+                <div class="time">32:28</div>
+                <div class="views">540K</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
