today first commit

--- a/JS/VIDEO_73/index.html
+++ b/JS/VIDEO_73/index.html
@@ -29,10 +29,20 @@
         .cName{
             color: white;
             opacity: 0.5;
-            font-size:small;      margin: 1px auto auto 5px;
+            font-size:small;     
+            margin: 1px 5px auto 5px;
          }
          .time{
             color: white;
+            opacity: 0.5;
+            font-size: small;
+            margin: 1px 5px auto 5px;
+         }
+         .views{
+            color: white;
+            opacity: 0.5;
+            font-size: small;
+            margin: 1px 5px auto 5px;
          }
     </style>
 </head>
