--- a/JS/VIDEO_73/index.html
+++ b/JS/VIDEO_73/index.html
@@ -50,16 +50,17 @@
     <div class="container">
         <div class="imagePor">
             <img class=" image" src="https://i.ytimg.com/vi/tVzUXW6siu0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLACwWOixJVrKLFindK92kYMgTcQbw" ,alt="">
-            <div class="duration"></div>
+            <div class="duration">31:28</div>
         </div>
         <div class="sidePro">
             <div class="title">Introduction to Backend | Sigma Web Dev veido #2</div>
             <div class="minPro">
                 <div class="cName">Code With Harry</div>
-                <div class="time">32:28</div>
+                <div class="time"></div>
                 <div class="views">540K</div>
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
