--- a/JS/VIDEO_73/index.html
+++ b/JS/VIDEO_73/index.html
@@ -18,6 +18,17 @@
         .image{
             border-radius: 5px;
         }
+        .duration{
+            background-color: black;        
+            color: white;
+            position: absolute;
+            top: 130px;  
+            left: 507px;  
+            opacity: 0.8;
+            border-radius: 5px;
+            padding: 2px;
+            
+        }
         .title{
             color: white;
             font-size: 29px;
@@ -49,15 +60,16 @@
 <body>
     <div class="container">
         <div class="imagePor">
-            <img class=" image" src="https://i.ytimg.com/vi/tVzUXW6siu0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLACwWOixJVrKLFindK92kYMgTcQbw" ,alt="">
+            <img class=" image" src= ,alt="">
             <div class="duration">31:28</div>
+
         </div>
         <div class="sidePro">
-            <div class="title">Introduction to Backend | Sigma Web Dev veido #2</div>
+            <div class="title"></div>
             <div class="minPro">
-                <div class="cName">Code With Harry</div>
+                <div class="cName"></div>
                 <div class="time"></div>
-                <div class="views">540K</div>
+                <div class="views"></div>
             </div>
         </div>
     </div>
