--- a/JS/VIDEO_73/index.html
+++ b/JS/VIDEO_73/index.html
@@ -36,6 +36,7 @@
         }
         .minPro{
             display: flex;
+            margin: 10px auto;
         }
         .cName{
             color: white;
@@ -61,7 +62,7 @@
     <div class="container">
         <div class="imagePor">
             <img class=" image" src= ,alt="">
-            <div class="duration">31:28</div>
+            <div class="duration"></div>
 
         </div>
         <div class="sidePro">
