--- a/JS/VIDOE_75/index.html
+++ b/JS/VIDOE_75/index.html
@@ -6,6 +6,6 @@
     <title>call back</title>
 </head>
 <body>
-    <script src="promise.js"></script>
+    <script src = "pratice.js"></script>
 </body>
 </html>
