today 1st commit

--- a/JS/VIDEO_76/index.html
+++ b/JS/VIDEO_76/index.html
@@ -6,6 +6,6 @@
     <title>Await & Fetch</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="pratice.js"></script>
 </body>
 </html>
