--- a/PRATICESET/GITHUB/4th_pro.html
+++ b/PRATICESET/GITHUB/4th_pro.html
@@ -20,6 +20,11 @@
         if(!/[a-z]/.test(a)){
             alert("there should be atleast one lowerchar")
         }
+
+        let digit = /[0-9]/.test(a)
+        if(!/[0-9]/.test(a)){
+            alert("there should be atleast one digit")
+        }
     </script>
 </body>
 </html>
